log
vi., 10 de mar. de 2023  9:02:35: 
 tests:  0|7
total_score: 0/70
bad6df7
Sat 11 Mar 2023 06:37:06 AM UTC: 
 tests:  0|7
total_score: 0/70
40cf430
Sat 11 Mar 2023 06:44:14 AM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
f9a1c69
Sat 11 Mar 2023 06:47:10 AM UTC: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  1|6
total_score: 10/70
47e526d
Sat 11 Mar 2023 06:48:13 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 20/70
b7a2cd7
Sat 11 Mar 2023 06:51:28 AM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:55:12: error: ‘p’ is a pointer; did you mean to use ‘->’?
   55 |    strcpy(p.nombre,nombre);
      |            ^
      |            ->
exercises.c:56:12: error: ‘p’ is a pointer; did you mean to use ‘->’?
   56 |    strcpy(p.rut,rut);
      |            ^
      |            ->
exercises.c:57:5: error: ‘p’ is a pointer; did you mean to use ‘->’?
   57 |    p.edad = edad;
      |     ^
      |     ->
Compilation failed
3f6e71e
Sat 11 Mar 2023 06:51:42 AM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  3|4
total_score: 30/70
abbcf37
Sat 11 Mar 2023 06:54:46 AM UTC: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  3|4
total_score: 30/70
63a3c2f
Sat 11 Mar 2023 06:55:00 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
17d6676
Sat 11 Mar 2023 06:55:19 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
5d3fe0b
Sat 11 Mar 2023 06:56:34 AM UTC: 
 exercises.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:77:17: error: assignment to ‘int *’ from incompatible pointer type ‘Vector *’ [-Werror=incompatible-pointer-types]
   77 |   vector1.datos = (Vector *) realloc(vector1.datos, (n+1)*sizeof(Vector));
      |                 ^
exercises.c:80:10: error: incompatible types when returning type ‘Vector’ but ‘Vector *’ was expected
   80 |   return vector1;
      |          ^~~~~~~
exercises.c:81:1: error: control reaches end of non-void function [-Werror=return-type]
   81 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1efd69f
Sat 11 Mar 2023 06:57:01 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:76:10: error: ‘vector1’ is a pointer; did you mean to use ‘->’?
   76 |   vector1.datos = NULL;
      |          ^
      |          ->
exercises.c:77:10: error: ‘vector1’ is a pointer; did you mean to use ‘->’?
   77 |   vector1.datos = (Vector *) realloc(vector1.datos, (n+1)*sizeof(Vector));
      |          ^
      |          ->
exercises.c:77:45: error: ‘vector1’ is a pointer; did you mean to use ‘->’?
   77 |   vector1.datos = (Vector *) realloc(vector1.datos, (n+1)*sizeof(Vector));
      |                                             ^
      |                                             ->
exercises.c:78:13: error: ‘vector1’ is a pointer; did you mean to use ‘->’?
   78 |   if(vector1.datos == NULL) exit(EXIT_FAILURE);
      |             ^
      |             ->
exercises.c:79:10: error: ‘vector1’ is a pointer; did you mean to use ‘->’?
   79 |   vector1.capacidad = n;
      |          ^
      |          ->
Compilation failed
4f271d8
Sat 11 Mar 2023 06:57:16 AM UTC: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:77:18: error: assignment to ‘int *’ from incompatible pointer type ‘Vector *’ [-Werror=incompatible-pointer-types]
   77 |   vector1->datos = (Vector *) realloc(vector1->datos, (n+1)*sizeof(Vector));
      |                  ^
exercises.c:76:18: error: ‘vector1’ is used uninitialized [-Werror=uninitialized]
   76 |   vector1->datos = NULL;
      |                  ^
cc1: all warnings being treated as errors
Compilation failed
e59997c
Sat 11 Mar 2023 06:57:45 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
test.c: In function ‘crearVector’:
exercises.c:76:18: error: ‘vector1’ is used uninitialized [-Werror=uninitialized]
   76 |   vector1->datos = NULL;
      |                  ^
cc1: all warnings being treated as errors
Compilation failed
3a8c515
Sat 11 Mar 2023 06:57:55 AM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:
test.c: In function ‘crearVector’:
exercises.c:76:43: error: ‘vector1’ is used uninitialized [-Werror=uninitialized]
   76 |   vector1->datos = (int *) realloc(vector1->datos, (n+1)*sizeof(int));
      |                                    ~~~~~~~^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a1c9c94
Sat 11 Mar 2023 06:58:08 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b0c1fba
Sat 11 Mar 2023 07:01:10 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
test.c: In function ‘crearVector’:
exercises.c:77:43: error: ‘*vector1.datos’ is used uninitialized [-Werror=uninitialized]
   77 |   vector1->datos = (int *) realloc(vector1->datos, (n+1) * sizeof(int));
      |                                    ~~~~~~~^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
4ee0326
Sat 11 Mar 2023 07:01:25 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:77:28: error: too few arguments to function ‘calloc’
   77 |   vector1->datos = (int *) calloc((n+1) * sizeof(int));
      |                            ^~~~~~
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:543:14: note: declared here
  543 | extern void *calloc (size_t __nmemb, size_t __size)
      |              ^~~~~~
Compilation failed
61884c7
Sat 11 Mar 2023 07:01:40 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
d3e52b8
Sat 11 Mar 2023 07:02:47 AM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘asignarValor’:
exercises.c:88:10: error: incompatible types when assigning to type ‘Vector’ from type ‘int’
   88 |   v[i] = valor;
      |          ^~~~~
Compilation failed
6720432
Sat 11 Mar 2023 07:05:50 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
bfe7c8a
Sat 11 Mar 2023 07:07:41 AM UTC: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  4|3
total_score: 40/70
6b89150
